2002-01-24  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-toolbar-control-item.c
	(bonobo_ui_toolbar_control_item_set_sensitive): impl.

	* bonobo/bonobo-ui-sync-toolbar.c
	(impl_bonobo_ui_sync_toolbar_state): add sensitivity
	set for controls.

	* bonobo/bonobo-ui-toolbar.c
	(hide_not_fitting_items): remove cruft.

2002-01-22  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-engine.c (state_update_new):
	sensitivity fix from stable.

2002-01-22  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-preferences.c
	(bonobo_ui_gconf_leaks_refs): allow gconf to be turned off.
	(bonobo_ui_preferences_get_toolbar_style): upd.
	(bonobo_ui_preferences_add_engine): upd.
	(bonobo_ui_preferences_remove_engine): upd.
	(get): upd.

	* tests/test-ui-auto.c: add.

2002-01-21  Michael Meeks  <michael@ximian.com>

	* glade/glade-bonobo.c (glade_bonobo_widget_new):
	release the property bag after using it.

	* configure.in: require libbonobo >= 1.109.1

	* bonobo/bonobo-ui-component.c
	(impl_set_prop): upd.
	
	* bonobo/bonobo-ui-container.c
	(impl_Bonobo_UIContainer_setAttr): upd.

	* bonobo/bonobo-ui-engine.c (get_parent_path),
	(bonobo_ui_engine_xml_set_prop): forward port from
	stable - fix node ownership issues, add component
	argument.

2002-01-18  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-control-frame.c
	(impl_Bonobo_ControlFrame_queueResize): queue resize
	on the socket.

2002-01-20  Hasbullah Bin Pit <sebol@ikhlas.com>

	* configure.ini: Added Malay (ms)to ALL_LINGUAS.
	* po/ms.po: Added Malay Malay Translation by
	  Mohamad Afifi Omar (App) <mr_mohd_afifi@yahoo.com>.

2002-01-18  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-toolbar-item.c
	(impl_set_style): move optimization
	(bonobo_ui_toolbar_item_set_style): here for speed
	in bonobo case.

	* bonobo/bonobo-ui-component.c (impl_freeze):
	optimize for repeated freeze/thaws.
	(impl_thaw): ditto.

2002-01-16  Michael Meeks  <michael@ximian.com>
