@@ -1,3 +1,9 @@
+2002-01-25  Michael Meeks  <michael@ximian.com>
+
+	* bonobo/bonobo-ui-sync-toolbar.c
+	(impl_bonobo_ui_sync_toolbar_state): fix silly
+	with sensitivity.
+
 2002-01-24  Michael Meeks  <michael@ximian.com>
 
 	* bonobo/bonobo-ui-toolbar-control-item.c
